--- a/index.css
+++ b/index.css
@@ -47,11 +47,13 @@ button {
 }
 #save-btn{
     background: rgb(17, 0, 100);
+    border: 10px;
     border-radius: 10px;
 }
 #reset-btn {
     border-color: black;
     background: rgb(205, 95, 227);
+    border-radius: 10px;
         border-radius: 10px;
 }
 #save-el {
